2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	* scribo/primitive/extract/separators_nonvisible.hh: Update use of
	object_groups and object_links.

2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Several improvements related to low-level data structures in XML
	output.

	* scribo/core/component_features_data.hh,
	* scribo/core/component_info.hh,
	* scribo/core/component_set.hh,
	* scribo/core/document.hh,
	* scribo/core/line_links.hh,
	* scribo/core/paragraph_info.hh,
	* scribo/core/paragraph_set.hh: Add operator==().

	* scribo/io/xml/internal/full_xml_visitor.hh: Save more data for
	groups, separators and paragraphs.

	* scribo/io/xml/internal/save_image_to_xml.hh: New.

	* scribo/io/xml/load.hh: Load new saved data.

	* tests/unit_test/cond_tests_qt: Add save_image_to_xml.hh.

2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	* scribo/toolchain/internal/content_in_doc_functor.hh: Make use of
	component::extract::alignments.

2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Small fixes.

	* scribo/core/paragraph_info.hh: Add color information.

	* scribo/debug/bboxes_image.hh: Reindent.

	* scribo/draw/bounding_box_links.hh: Update use of is_link_valid.

	* scribo/make/text_components_image.hh: Fix wrong domain inclusions.

	* scribo/toolchain/text_in_picture.hh: Fix wrong include.

	* src/debug/show_paragraph_blocks.cc: Add missing curly brackets.

2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	* scribo/primitive/extract/alignments.hh: Fix several bugs.

2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Improve object_groups and object_links API.

	* scribo/core/group_info.hh,
	* scribo/core/internal/sort_comp_ids.hh: New.

	* scribo/core/object_groups.hh,
	* scribo/core/object_links.hh: Improve API.

	* scribo/core/line_info.hh,
	* scribo/core/line_set.hh,
	* scribo/debug/decision_image.hh,
	* scribo/estim/object_groups_mean_width.hh,
	* scribo/filter/object_groups_mean_width.hh,