@@ -1,5 +1,5 @@
-# Copyright (C) 2009, 2010 EPITA Research and Development Laboratory
-# (LRDE).
+# Copyright (C) 2009, 2010, 2011 EPITA Research and Development
+# Laboratory (LRDE).
 #
 # This file is part of Olena.
 #
@@ -20,8 +20,10 @@
 
 include $(top_srcdir)/scribo/tests/tests.mk
 
-check_PROGRAMS = line_info
+check_PROGRAMS = line_info \
+		 object_groups
 
 line_info_SOURCES = line_info.cc
+object_groups_SOURCES = object_groups.cc
 
 TESTS = $(check_PROGRAMS)
