@@ -1,5 +1,13 @@
 2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>
 
+	Add a test for object_groups.
+
+	* tests/core/Makefile.am: New target.
+
+	* tests/core/object_groups.cc: New.
+
+2011-05-03  Guillaume Lazzara  <lazzara@lrde.epita.fr>
+
 	* scribo/primitive/extract/separators_nonvisible.hh: Update use of
 	object_groups and object_links.
 
